[package]
name = "stig-api-scanner"
version = "0.1.0"
edition = "2021"
description = "Automated DISA API Security Requirements Guide (SRG) V1R0.1 compliance testing tool"
keywords = ["stig", "security", "api", "compliance", "disa"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "stig-api-scanner"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
async-trait = "0.1"
base64 = "0.22"
